--- a/OpenGlTemplate/OpenGlTemplate.vcxproj.filters
+++ b/OpenGlTemplate/OpenGlTemplate.vcxproj.filters
@@ -29,12 +29,21 @@
     <ClInclude Include="stb_image.h">
       <Filter>Arquivos de Recurso</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Arquivos de Recurso</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="3.3.shader.vs">
       <Filter>Arquivos de Recurso</Filter>
     </None>
     <None Include="3.3.shader.frs">
+      <Filter>Arquivos de Recurso</Filter>
+    </None>
+    <None Include="1.light_cube.vs">
+      <Filter>Arquivos de Recurso</Filter>
+    </None>
+    <None Include="1.light_cube.frs">
       <Filter>Arquivos de Recurso</Filter>
     </None>
   </ItemGroup>
