--- a/OpenGlTemplate/OpenGlTemplate.vcxproj
+++ b/OpenGlTemplate/OpenGlTemplate.vcxproj
@@ -162,6 +162,7 @@
     <None Include="1.light_cube.vs" />
     <None Include="3.3.shader.frs" />
     <None Include="3.3.shader.vs" />
+    <None Include="simplecolor.frag" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
