--- a/OpenGlTemplate/OpenGlTemplate.vcxproj
+++ b/OpenGlTemplate/OpenGlTemplate.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bezier.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
