--- a/OpenGlTemplate/OpenGlTemplate.vcxproj
+++ b/OpenGlTemplate/OpenGlTemplate.vcxproj
@@ -157,12 +157,13 @@
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="quadBezierFull.frag" />
     <None Include="transparentPlane.frag" />
     <None Include="general.vert" />
     <None Include="3.3.shader.frs" />
     <None Include="3.3.shader.vert" />
     <None Include="points.frag" />
-    <None Include="quadBezier.frag" />
+    <None Include="quadBezierLine.frag" />
     <None Include="quadBezier.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
