--- a/OpenGlTemplate/OpenGlTemplate.vcxproj.filters
+++ b/OpenGlTemplate/OpenGlTemplate.vcxproj.filters
@@ -58,10 +58,13 @@
     <None Include="quadBezier.vert">
       <Filter>Arquivos de Recurso\Shaders\Bezier</Filter>
     </None>
-    <None Include="quadBezier.frag">
+    <None Include="quadBezierLine.frag">
       <Filter>Arquivos de Recurso\Shaders\Bezier</Filter>
     </None>
     <None Include="points.frag">
+      <Filter>Arquivos de Recurso\Shaders\Bezier</Filter>
+    </None>
+    <None Include="quadBezierFull.frag">
       <Filter>Arquivos de Recurso\Shaders\Bezier</Filter>
     </None>
   </ItemGroup>
